# SWE-benchify

./: .gitignore  Dockerfile.synthesis  PLAN.md  README.md  RUNNING_EVALS.md  SPEC.md  STATUS.md  claude-opus.opus.json  claude-sonnet.sonnet.json  factory.md  justfile  my_factory.py  my_swebench.py  pyproject.toml  swebenchify-ansible.yaml  swebenchify-rh-v1.yaml  swebenchify.yaml  vertex-creds.yaml
.remote-validate/: manifest.jsonl
configs/: batch-synth-go-1k.yaml  swebenchify-go-v1.yaml  swebenchify-rh-v1.yaml  swebenchify-rh-v2-jira.yaml  swebenchify-rust-v1.yaml  yield-only-sweep-22.yaml
data/: synthetic-go-instances.jsonl
docs/: DIFFICULTIES_REPORT.md  STATUS.md  SYNTH_SWE_BENCH_PLAN.md  explorer.html  index.html  swe-benchify-engineering-plan.md
k8s/: collect-eval.sh  collect-results.sh  collect-validation.sh  enrichment-job.yaml  eval-job.yaml  launch-all.sh  launch-enrichment.sh  launch-eval.sh  launch-validation.sh  synthesis-job.yaml  validation-job.yaml
output/: eval-subset.jsonl  instances-python.jsonl  official-subset-2.jsonl  official-subset.jsonl  predictions_haiku.jsonl  predictions_haiku_batch2.jsonl  predictions_opus.jsonl  predictions_opus_batch2.jsonl  predictions_sonnet.jsonl  swebenchify-dataset.jsonl
results/: docker_validation.json  flask_spec_bench.json  flask_spec_bench_v2.json  flask_spec_bench_v3.json  flask_spec_bench_v3_remaining.json  mechanical_overlap.json  msb_harness_check.json  pytest_spec_bench.json  ranking_eval_sonnet.json  requests_spec_bench.json  xarray_spec_bench.json
scripts/: batch_enrich.py  batch_synthesize.py  build_and_eval.py  build_and_push_images.py  build_and_push_images_generic.py  build_and_push_python_images.py  build_base_image.py  compare_eval.py  compare_harbor_runs.py  (+34 more)
(+849 files in other folders)
