[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swebenchify"
version = "1.0.0"
description = "Transform GitHub repositories into SWE-bench-compatible benchmarks"
requires-python = ">=3.11"
dependencies = [
    "pyyaml",
    "requests",
    "unidiff",
    "ghapi",
    "claude-code-sdk",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
swebenchify = "swebenchify.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
warn_return_any = false

[[tool.mypy.overrides]]
module = [
    "datasets",
    "datasets.*",
    "swebench.*",
    "claude_code_sdk",
    "claude_code_sdk.*",
    "unidiff",
    "unidiff.*",
    "docker",
    "docker.*",
    "requests",
    "requests.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["output", "logs", ".factory", ".git"]
